fixed unaligned buttons

--- a/style/style.css
+++ b/style/style.css
@@ -100,7 +100,6 @@
     color: white;
     font-size: 12px;
     padding-inline: 5px;
-    bottom: 5px;
     width: 120px;
     height: 30px;
     opacity: .7;
@@ -123,8 +122,9 @@
     justify-content: center;
     padding-left: 35px;
     padding-right: 35px;
-    margin-right: 80px;
-    margin-left: 20px;
+    margin-right: auto;
+    margin-left: auto;
+    align-items: center;
 }
 
 .thirdGrid {
@@ -212,11 +212,6 @@ label {
     margin-top: 10px;
     gap: 10px;
 
-}
-
-.newPageBtn {
-    margin-left: 20px;
-    margin-top: 10px;
 }
 
 .layout-select select,
